// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`templates.Xhtml creates a body element 1`] = `"{% body %}"`;

exports[`templates.Xhtml creates a body element 2`] = `"{% body %}</body></html>"`;

exports[`templates.Xhtml creates a cover page 1`] = `
"
      <section class=\\"cover\\" style=\\"text-align: center; padding: 0; margin: 0;\\">
        <svg xmlns=\\"http://www.w3.org/2000/svg\\" height=\\"100%\\" preserveAspectRatio=\\"xMidYMid meet\\" version=\\"1.1\\" viewBox=\\"0 0 1 1\\" width=\\"100%\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\">
          <image width=\\"1\\" height=\\"1\\" xlink:href=\\"../test\\"/>
        </svg>
      </section>
    "
`;

exports[`templates.Xhtml creates a head element 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\" standalone=\\"no\\"?>
        <html xmlns=\\"http://www.w3.org/1999/xhtml\\"
          xmlns:epub=\\"http://www.idpf.org/2007/ops\\"
          xmlns:ibooks=\\"http://vocabulary.itunes.apple.com/rdf/ibooks/vocabulary-extensions-1.0\\"
          epub:prefix=\\"ibooks: http://vocabulary.itunes.apple.com/rdf/ibooks/vocabulary-extensions-1.0\\">
        <head>
          <title></title>
          <meta http-equiv=\\"default-style\\" content=\\"text/html charset=utf-8\\"/>
          <meta name=\\"robots\\" content=\\"noindex,nofollow\\"/>
          {% body %}
        </head>
        <body>
      "
`;

exports[`templates.Xhtml creates a head element 2`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\" standalone=\\"no\\"?>
        <html xmlns=\\"http://www.w3.org/1999/xhtml\\"
          xmlns:epub=\\"http://www.idpf.org/2007/ops\\"
          xmlns:ibooks=\\"http://vocabulary.itunes.apple.com/rdf/ibooks/vocabulary-extensions-1.0\\"
          epub:prefix=\\"ibooks: http://vocabulary.itunes.apple.com/rdf/ibooks/vocabulary-extensions-1.0\\">
        <head>
          <title></title>
          <meta http-equiv=\\"default-style\\" content=\\"text/html charset=utf-8\\"/>
          <meta name=\\"robots\\" content=\\"index,follow\\"/>
          {% body %}
        </head>
        <body>
      "
`;

exports[`templates.Xhtml creates as link element 1`] = `"<link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"{% body %}\\"/>"`;

exports[`templates.Xhtml creates as link element 2`] = `"<style>{% body %}</style>"`;

exports[`templates.Xhtml creates script elements 1`] = `"<script type=\\"application/javascript\\" src=\\"{% body %}\\"></script>"`;

exports[`templates.Xhtml creates script elements 2`] = `"<script type=\\"application/javascript\\">{% body %}</script>"`;

exports[`templates.Xhtml creates the loi elements 1`] = `
"
      <section epub:type=\\"loi\\" class=\\"chapter figures\\">
        <header>
          <h1>Figures</h1>
        </header>
      </section>
    "
`;
